created rough index.html start

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Home | Product Page</title>
 </head>
 <body>
-<script src="./main.css"></script>
+	<script src="./main.css"></script>
     <script src="./home.js"></script>
+    <script src="./products.js"></script>
 </body>
 </html>
