--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
     <title>Home | Product Page</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<script src="./main.css"></script>
     <script src="./home.js"></script>
 </body>
 </html>
