switching to master

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="award.html">Awards</a>
+		<a href="about.html">About</a>
 <article>
 	<h1>PENguins</h1>
+
 	
 </article>
 </body>
