--- a/awards.html
+++ b/awards.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>PENguins|Awards</title>
+    <title>Awards</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="awards.css">
 </head>
