--- a/awards.html
+++ b/awards.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" type="text/css" href="awards.css">
 </head>
 <body>
-	<h1>PENguins, inc. Awards and Honoros</h1>
+	<h1>PENguins, INC. Awards and Honors</h1>
+	<article>
+		<h2>USPS Pen of The Year</h2>
+		<p>Winner of the highly prestigious United States Pen
+	</article>
 	
     <script src="./awardsljs"></script>
 </body>
