--- a/awards.html
+++ b/awards.html
@@ -2,17 +2,29 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>Awards</title>
+    <title>PENguins, ICS> | Awards</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="awards.css">
 </head>
 <body>
 	<h1>PENguins, INC. Awards and Honors</h1>
 	<article>
-		<h2>USPS Pen of The Year</h2>
-		<p>Winner of the highly prestigious United States Pen
+		<h2>United Pen Association 'Pen-Of-The-Year'</h2>
+		<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC.</p>
 	</article>
-	
+	<article>
+		<h2>United States Postal Service 'Most Reliable Pen'</h2>
+		<p>"PENguins, INC. is the winner of the USPS' most accomplished award. Following a range of diverse products, each individual pen upon inspection is used throughout the entire USPS system without error. Never do you get a dry tip, there has never been a more reliable pen the USPS has ever held.</p>
+	</article>
+	<article>
+		<h2>United Pen Association 'Pen-Of-The-Year'</h2>
+		<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC.</p>
+	</article>
+	<article>
+		<h2>United Pen Association 'Pen-Of-The-Year'</h2>
+		<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC.</p>
+	</article>
+
     <script src="./awardsljs"></script>
 </body>
 </html>
