--- a/awards.html
+++ b/awards.html
@@ -4,25 +4,25 @@
 	<meta charset="utf-8">
     <title>PENguins, ICS> | Awards</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="awards.css">
+    <link rel="stylesheet" type="text/css" href="../awards.css">
 </head>
 <body>
-	<h1>PENguins, INC. Awards and Honors</h1>
-	<article>
-		<h2>United Pen Association 'Pen-Of-The-Year'</h2>
-		<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC.</p>
+	<h1 id="headline">PENguins, INC. Awards and Honors</h1>
+	<article id="playground">
+		<h2 id="child">United Pen Association 'Pen-Of-The-Year'</h2>
+		<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC."</p>
 	</article>
 	<article>
 		<h2>United States Postal Service 'Most Reliable Pen'</h2>
-		<p>"PENguins, INC. is the winner of the USPS' most accomplished award. Following a range of diverse products, each individual pen upon inspection is used throughout the entire USPS system without error. Never do you get a dry tip, there has never been a more reliable pen the USPS has ever held.</p>
+		<p>"PENguins, INC. is the winner of the USPS' most accomplished award. Following a range of diverse products, each individual pen upon inspection is used throughout the entire USPS system without error, at an economical price. There has never been a more reliable pen that the USPS has ever held."</p>
 	</article>
 	<article>
-		<h2>United Pen Association 'Pen-Of-The-Year'</h2>
-		<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC.</p>
+		<h2>Pulitzer Award For 'Achievement In Pen-Craft'</h2>
+		<p>"A new sub-category for the Pulitzer Prize, the 'Pulitzer Award For Achievement In Pen-Craft' has been awarded to PENguins, INC. for their collective product creations. Aside from economical value and creative flair, no pen company has ever boasted more illustrious cliental-of-use than PENguins, INC. They are the best, and everyone who is anyone uses them for script."</p>
 	</article>
 	<article>
-		<h2>United Pen Association 'Pen-Of-The-Year'</h2>
-		<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC.</p>
+		<h2>Amazon.com "Most Requested Product In Compant Histoy'</h2>
+		<p>"Amazon.com awards PENguins, INC. for the first time award of 'Most Requested Product" for the company history. Millions of pens have been sold, because people are able and willing to pay for the best pen product on the market."</p>
 	</article>
 
     <script src="./awardsljs"></script>
