--- a/awards.html
+++ b/awards.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <title>PENguins, ICS> | Awards</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../awards.css">
+    <link rel="stylesheet" type="text/css" href="awards.css">
 </head>
 <body>
 	<header>
