added first pen photo

--- a/index.html
+++ b/index.html
@@ -6,15 +6,77 @@
 	<title>PENguins</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="main.css">
+
 </head>
 <body>
 	<nav>
 		<a href="index.html">Home</a>
-		<a href="award.html">Awards</a>
+		<a href="awards.html">Awards</a>
 		<a href="about.html">About</a>
+		<a href="signin.html">Sign In</a>
+		</nav>
 <article>
 	<h1>PENguins</h1>
 
+	<div i="images">
+
+
+	<div><img src="images/MPfountain pen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen">
+	<caption>Hey thats pretty good!</caption>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>&copy;PENguins INC. </footer>
 	
 </article>
 </body>
