--- a/signin.html
+++ b/signin.html
@@ -12,6 +12,13 @@
 		<h1>PENguins</h1>
 	</article>
 	
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="awards.html">Awards</a>
+		<a href="about.html">About</a>
+		<a href="signin.html">Sign In</a>
+		</nav>
+
 		<form>
 			<div id="form">
 				<h1>Log In</h1>
