--- a/awards.html
+++ b/awards.html
@@ -13,7 +13,7 @@
 	<article class="awards">
 		<div class="section">
 			<ul class="individual"> 
-				<li>United Pen Association 'Pen-Of-The-Year'</li>
+				<li class="name">United Pen Association 'Pen-Of-The-Year'</li>
 					<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC."</p>
 					<br></br>
 				<li>United States Postal Service 'Most Reliable Pen'</li>
@@ -28,4 +28,8 @@
 		</div>
 	</article>
 </body>
+<br></br>
+<footer>
+	 <p>&copy; PENguins, INC.</p>
+</footer>
 </html>
