Changing the 1st picture caption

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 	<div><img src="images/MPfountain pen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen">
-	<caption>Hey thats pretty good!</caption>
+	<caption>Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen</caption>
 
 
 
