Added links to the other pages on the 'Awards' page.

--- a/awards.html
+++ b/awards.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" type="text/css" href="awards.css">
 </head>
 <body>
+
+
+<nav>
+		<a href="index.html">Home</a>
+		<a href="awards.html">Awards</a>
+		<a href="about.html">About</a>
+		<a href="signin.html">Sign In</a>
+		</nav>
 	<header>
 		<h1 id="headline">PENguins, INC. Awards and Honors</h1><br></br>
 	</header>
