--- a/awards.html
+++ b/awards.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 	<header>
-		<h1 id="headline">PENguins, INC. Awards and Honors</h1><br></br>
+		<link rel="stylesheet" type="text/css" href="index.html"><a href="index.html" id="home">Home</a></link>
+		<br></br>
+		<h1 id="headline">PENguins, INC. Awards and Honors</h1>
+		</a>
+		<br></br>
 	</header>
 	<article class="awards">
 		<div class="section">
