--- a/awards.html
+++ b/awards.html
@@ -17,16 +17,16 @@
 	<article class="awards">
 		<div class="section">
 			<ul class="individual"> 
-				<li class="name">United Pen Association 'Pen-Of-The-Year'</li>
+				<li class="name">United Pen Association's 'Pen-Of-The-Year'</li>
 					<p>"Winner of the prestigious 'United States Pen-Of-Excellence Award', PENguins, INC. excells in creativity, style, and price value for each and every one of their products. No other company in the world offers more reliably functional and aesthetically pleasing pen products than PENguins, INC."</p>
 					<br></br>
-				<li>United States Postal Service 'Most Reliable Pen'</li>
+				<li>United States Postal Service- 'Most Reliable Pen'</li>
 					<p>"PENguins, INC. is the winner of the USPS' most accomplished award. Following a range of diverse products, each individual pen upon inspection is used throughout the entire USPS system without error, at an economical price. There has never been a more reliable pen that the USPS has ever held."</p>
 					<br></br>
 				<li>Pulitzer Award For 'Achievement In Pen-Craft'</li>
 					<p>"A new sub-category for the Pulitzer Prize, the 'Pulitzer Award For Achievement In Pen-Craft' has been awarded to PENguins, INC. for their collective product creations. Aside from economical value and creative flair, no pen company has ever boasted more illustrious cliental-of-use than PENguins, INC. They are the best, and everyone who is anyone uses them for script."</p>
 					<br></br>
-				<li>Amazon.com "Most Requested Product In Compant Histoy'</li>
+				<li>Amazon.com 'Most Requested Product In Company Histoy'</li>
 					<p>"Amazon.com awards PENguins, INC. for the first time award of 'Most Requested Product" for the company history. Millions of pens have been sold, because people are able and willing to pay for the best pen product on the market."</p>
 			</ul>
 		</div>
