--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 	<div i="images">
 
 
-	<div><img src="images/MPfountain pen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen">
+	<div><img src="images/MPfountain pen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen"></div>
 	<caption>Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen</caption>
+	<div><img src="images/CartierJaguar.jpg"></div>
+	<caption>Cariter Jaguar Ballpoint Pen</caption>
+	<div><img src="images/CartierDiamond.jpg"></div>
+	<caption>Cartier Diamond Gold Limited Edition Fountain Pen</caption>
+
 
 
 
