minor css changes

--- a/signin.html
+++ b/signin.html
@@ -27,7 +27,9 @@
 			<input type="text" name="userid" id="userid">
 			<label for="password"><br/>Password:<br/></label>
 			<input type="password" name="password" id="password">
+			<section class="divider">
 			<br/><button type="submit" class="signinButton">Log in</button>
+			</section>
 			<section id="hyperlinks">
 				<a href="#">forgot password?</a>
 			</section>
@@ -38,22 +40,34 @@
 		
 		<div id="register">
 			<h1 class="headerDesign">Register</h1>
-
-			<label for="firstName">First Name:<br/></label>
+			
+			<section class="divider">
+			<label for="firstName">First Name:</label>
 			<input type="text" name="firstName" id="firstName">
+			</section>
 			
-			<label for="lastName"><br/>Last Name:<br/></label>
+			<section class="divider">
+			<label for="lastName">Last Name:<br></label>
 			<input type="text" name="lastName" id="lastName">
-					
-			<label for="userID"><br/>User ID: <br/></label>
-			<input type="text" name="userID" id="userID">
-	
-			<label for="regPassword"><br/>Password:<br/></label>
-			<input type="regPassword" name="regPassword" id="regPassword">
+			</section>
 			
-			<label for="email"><br/>Email-ID:<br/></label>
+			<section class="divider">
+			<label for="email"><br/>Email-ID:</label>
 			<input type="text" name="email" id="email">
-			<br/><button type="submit" class="signinButton">Register</button>
+			</section>
+
+			<section class="divider">		
+			<label for="userID"><br/>User ID: </label>
+			<input type="text" name="userID" id="userID">
+			</section>
+			
+			<section class="divider">
+			<label for="regPassword">Password: </label>
+			<input type="regPassword" name="regPassword" id="regPassword">
+			</section>
+			<section class="divider">
+			<button type="submit" class="signinButton">Register</button>
+			</section>
 		
 		</div>
 	</form>
