--- a/index.html
+++ b/index.html
@@ -22,14 +22,27 @@
 
 	<div><img src="images/MPfountain pen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen"></div>
 	<caption>Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen</caption>
+	
 	<div><img src="images/CartierJaguar.jpg"></div>
 	<caption>Cariter Jaguar Ballpoint Pen</caption>
+	
 	<div><img src="images/CartierDiamond.jpg"></div>
 	<caption>Cartier Diamond Gold Limited Edition Fountain Pen</caption>
+	
 	<div><img src="images/Montegrappa.jpeg"></div>
 	<caption>Montegrappa "My Guardian Angel" Rollerball pen, 18k gold trim</caption>
 
+	<div><img src="images/MGDucale.jpg"></div>
+	<caption>Montegrappa Ducale Black Rose Gold roller</caption>
 
+	<div><img src="images/Gerber.jpg"></div>
+	<caption>Gerber Survival Pen</caption>
+
+	<div><img src="images/BIC.jpg"></div>
+	<caption>BIC ballpoint pen</caption>
+
+	<div><img src="images/BICEconomy.jpg"></div>
+	<caption>BIC Economy pen</caption>
 
 
 
