**fixed nav bar

--- a/awards.html
+++ b/awards.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 	<nav>
-		<link rel="stylesheet" type="text/css" href="index.html"><a href="index.html" id="home">Home</a></link>
+		<a href="index.html">Home</a>
+		<a href="awards.html">Awards</a>
+		<a href="about.html">About</a>
+		<a href="signin.html">Sign In</a>
 	</nav>
 	<header>
 		<br></br>
