re-added the lost photos

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 	<div><img src="images/BICEconomy.jpg"></div>
 	<caption>BIC Economy pen</caption>
 
+	<div><img src="images/Montegrappa.jpeg"></div>
+
+	<div><img src="images/MPfountainPen.jpg"></div>
+
+	<div><img src="images/CartierDiamond.jpg"></div>
+
+	<div><img src="images/CartierJaguar.jpg"></div>
+
 
 
 
