made array of objects anf few changes to js file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </div>
 
-	<div><img src="images/MGDucale.jpg"></div>
+	<!-- <div><img src="images/MGDucale.jpg"></div>
 	<caption>Montegrappa Ducale Black Rose Gold roller</caption>
 
 	<div><img src="images/Gerber.jpg"></div>
@@ -54,8 +54,7 @@
 
 	<div><img src="images/BICEconomy.jpg"></div>
 	<caption>BIC Economy pen</caption>
->>>>>>> master
-
+ -->
 
 
 
