Changed a few small errors

--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <title>PENguins</title>
-    <link rel="stylesheet" type="text/css" href="about.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <h1 class="textalignment">All About The PENguins</h1>
 <body style="background-color: egg;">
