added photos that were erased

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <article>
 	<h1>PENguins</h1>
 
-	<!-- <div id="images">
+	<div id="images">
 
 
 	<div><img src="images/MPfountain pen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen"></div>
@@ -32,7 +32,19 @@
 	<caption>Cartier Diamond Gold Limited Edition Fountain Pen</caption>
 	
 	<div><img src="images/Montegrappa.jpeg"></div>
-	<caption>Montegrappa "My Guardian Angel" Rollerball pen, 18k gold trim</caption> -->
+	<caption>Montegrappa "My Guardian Angel" Rollerball pen, 18k gold trim</caption>
+
+	<div><img src="images/MGDucale.jpg"></div>
+	<caption>Montegrappa Ducale Black Rose Gold roller</caption>
+
+	<div><img src="images/Gerber.jpg"></div>
+	<caption>Gerber Survival Pen</caption>
+
+	<div><img src="images/BIC.jpg"></div>
+	<caption>BIC ballpoint pen</caption>
+
+	<div><img src="images/BICEconomy.jpg"></div>
+	<caption>BIC Economy pen</caption>
 
 
 <div id="card">
@@ -43,15 +55,6 @@
 
 </div>
 
-	
-
-	<div><img src="images/Montegrappa.jpeg"></div>
-
-	<div><img src="images/MPfountainPen.jpg"></div>
-
-	<div><img src="images/CartierDiamond.jpg"></div>
-
-	<div><img src="images/CartierJaguar.jpg"></div>
 
 
 	</div>
