added some text and changed css

--- a/About.html
+++ b/About.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <title>PENguins</title>
+    <title id="abouttitle">PENguins</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<h1 class="textalignment">All About The PENguins</h1>
-<body style="background-color: egg;">
+<h1 id="abouth1" class="textalignment">All About The PENguins</h1>
+<body id="aboutbody" style="background-color: egg;">
 <nav>
 		<a href="index.html">Home</a>
 		<a href="awards.html">Awards</a>
@@ -15,7 +15,7 @@
 		</nav>
 	<article>
 	<section class="textalignment">
-		<p id="aboutP"> Team PENguin consist of four talented individuals who happened to meet in the valley of despair, TN. We began our adventure at PENguin headquarters by devoting ourselves to a single purpose of suppling the masses with the finest writing utensils known to man. I know what you're thinking that is impossible, but yet here we are introducing superior products that write under the harshest conditions.</p>
+		<p id="aboutP"> Team PENguin consist of four talented individuals who happened to meet in the valley of despair. We began our adventure at the PENguin headquarters hyped on caffine and the ink fumes. Next we began devoting ourselves to a single purpose of suppling the masses with the finest writing utensils known to man. I know what you're thinking that is impossible, but yet here we are introducing superior products that write under the harshest conditions.</p>
 	</section>
 	</article> 
 	<img src="images/Madagascar.jpg" alt="" style="width:304px;height:228px;">
