--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
 	<img src="images/Madagascar.jpg" alt="" style="width:304px;height:228px;">
     <script src="">about.js</script>
     <footer>
-    Team PENguin 2017
+    &copy;PENguins INC.
     </footer>
 </body>
 
