--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div id="images">
 
 
-	<div><img src="images/MPfountain pen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen"></div>
+	<div><img src="images/MPfountainPen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen"></div>
 	<caption>Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen</caption>
 	
 	<div><img src="images/CartierJaguar.jpg"></div>
