--- a/awards.html
+++ b/awards.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="awards.css">
 </head>
-<body>
+<body background-color: #AED6F1>
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="awards.html">Awards</a>
