--- a/About.html
+++ b/About.html
@@ -5,14 +5,16 @@
     <title>PENguins</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<h1 class="textalignment">All About The PENguins</h1>
-<body style="background-color: egg;">
-<nav>
+<article id="heading">
+		<img src="images/logo1.jpg">
+		<h1>PENguins</h1>
+	</article>
+	<nav id="mainNav">
 		<a href="index.html">Home</a>
 		<a href="awards.html">Awards</a>
 		<a href="about.html">About</a>
 		<a href="signin.html">Sign In</a>
-		</nav>
+	</nav>
 	<article>
 	<section class="textalignment">
 		<p id="aboutP"> Team PENguin consist of four talented individuals who happened to meet in the valley of despair, TN. We began our adventure at PENguin headquarters by devoting ourselves to a single purpose of suppling the masses with the finest writing utensils known to man. I know what you're thinking that is impossible, but yet here we are introducing superior products that write under the harshest conditions.</p>
@@ -20,9 +22,7 @@
 	</article> 
 	<img src="images/Madagascar.jpg" alt="" style="width:304px;height:228px;">
     <script src="">about.js</script>
-    <footer>
-    Team PENguin 2017
-    </footer>
+    <footer>&copy;PENguins INC. </footer>
 </body>
 
 </html>
