--- a/awards.html
+++ b/awards.html
@@ -5,9 +5,14 @@
     <title>PENguins, ICS> | Awards</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="awards.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<nav>
+	<article id="heading">
+		<img src="images/logo1.jpg">
+		<h1>PENguins</h1>
+	</article>
+	<nav id="mainNav">
 		<a href="index.html">Home</a>
 		<a href="awards.html">Awards</a>
 		<a href="about.html">About</a>
@@ -37,7 +42,5 @@
 	</article>
 </body>
 <br></br>
-<footer>
-	 <p>&copy; PENguins, INC.</p>
-</footer>
+<footer>&copy;PENguins INC. </footer>
 </html>
