--- a/signin.html
+++ b/signin.html
@@ -8,16 +8,16 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
-	<article>
+	<article id="heading">
+		<img src="images/logo1.jpg">
 		<h1>PENguins</h1>
 	</article>
-	
-	<nav>
+	<nav id="mainNav">
 		<a href="index.html">Home</a>
 		<a href="awards.html">Awards</a>
 		<a href="about.html">About</a>
 		<a href="signin.html">Sign In</a>
-		</nav>
+	</nav>
 
 	<form>
 
@@ -73,6 +73,6 @@
 	</form>
 	
 	</section>
-	<script src="products.js"></script>
+	<footer>&copy;PENguins INC. </footer>
 	</body>
 </html>
