--- a/index.html
+++ b/index.html
@@ -8,57 +8,21 @@
 
 </head>
 <body>
+	<article id="heading">
+		<img src="images/logo1.jpg">
+		<h1>PENguins</h1>
+	</article>
 	<nav id="mainNav">
-	<ul>
 		<a href="index.html">Home</a>
 		<a href="awards.html">Awards</a>
 		<a href="about.html">About</a>
 		<a href="signin.html">Sign In</a>
-	</ul>
-		</nav>
-<article>
-	<h1>PENguins</h1>
-
-	<!-- <div id="images">
-
-
-	<div><img src="images/MPfountain pen.jpg" alt="Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen"></div>
-	<caption>Monte Blanc Meisterstuck Gold Coated Classique Fountain Pen</caption>
-	
-	<div><img src="images/CartierJaguar.jpg"></div>
-	<caption>Cariter Jaguar Ballpoint Pen</caption>
-	
-	<div><img src="images/CartierDiamond.jpg"></div>
-	<caption>Cartier Diamond Gold Limited Edition Fountain Pen</caption>
-	
-	<div><img src="images/Montegrappa.jpeg"></div>
-	<caption>Montegrappa "My Guardian Angel" Rollerball pen, 18k gold trim</caption> -->
-
-
-<div id="card">
-	
-	<ul id="productList">
-		
-	</ul>
-
-</div>
+	</nav>
 
 	
-
-	<div><img src="images/Montegrappa.jpeg"></div>
-
-	<div><img src="images/MPfountainPen.jpg"></div>
-
-	<div><img src="images/CartierDiamond.jpg"></div>
-
-	<div><img src="images/CartierJaguar.jpg"></div>
-
-
-	</div>
-
 <footer>&copy;PENguins INC. </footer>
 	
-</article>
-	<script src="products.js"></script>
+
+<script src="products.js"></script>
 </body>
 </html>
