--- a/About.html
+++ b/About.html
@@ -3,19 +3,20 @@
 <head>
 	<meta charset="utf-8">
     <title id="abouttitle">PENguins</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<h1 id="abouth1" class="textalignment">All About The PENguins</h1>
-<body id="aboutbody" style="background-color: egg;">
-<nav>
+    <nav>
 		<a href="index.html">Home</a>
 		<a href="awards.html">Awards</a>
 		<a href="about.html">About</a>
 		<a href="signin.html">Sign In</a>
 		</nav>
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<h1 id="abouth1" class="textalignment">All About The PENguins</h1>
+<body id="aboutbody" style="background-color: #AED6F1;">
+
 	<article>
 	<section class="textalignment">
-		<p id="aboutP"> Team PENguin consist of four talented individuals who happened to meet in the valley of despair. We began our adventure at the PENguin headquarters hyped on caffine and the ink fumes. Next we began devoting ourselves to a single purpose of suppling the masses with the finest writing utensils known to man. I know what you're thinking that is impossible, but yet here we are introducing superior products that write under the harshest conditions.</p>
+		<p id="aboutP"> Team PENguin consist of four talented individuals who happened to meet in the valley of despair. We began our adventure at the PENguin headquarters hyped on caffeine and the ink fumes. We hit the ground running devoting ourselves to a single purpose of suppling the masses with the finest writing utensils known to man. I know what you're thinking that is impossible, but yet here we are introducing superior products that write under the harshest conditions.</p>
 	</section>
 	</article> 
 	<img src="images/Madagascar.jpg" alt="" style="width:304px;height:228px;">
