minor changes and fixes

--- a/signin.html
+++ b/signin.html
@@ -22,11 +22,19 @@
 	<form>
 
 		<div id="form">
+
 			<h1 class="headerDesign">Log In</h1>
-			<label for="userid">User ID:<br/></label>
+
+			<section class="divider">
+			<label for="userid">User ID:</label>
 			<input type="text" name="userid" id="userid">
-			<label for="password"><br/>Password:<br/></label>
+			</section>
+
+			<section class="divider">
+			<label for="password">Password:<br/></label>
 			<input type="password" name="password" id="password">
+			</section>
+
 			<section class="divider">
 			<br/><button type="submit" class="signinButton">Log in</button>
 			</section>
@@ -47,17 +55,17 @@
 			</section>
 			
 			<section class="divider">
-			<label for="lastName">Last Name:<br></label>
+			<label for="lastName">Last Name:</label>
 			<input type="text" name="lastName" id="lastName">
 			</section>
 			
 			<section class="divider">
-			<label for="email"><br/>Email-ID:</label>
+			<label for="email">Email-ID:</label>
 			<input type="text" name="email" id="email">
 			</section>
 
 			<section class="divider">		
-			<label for="userID"><br/>User ID: </label>
+			<label for="userID">User ID: </label>
 			<input type="text" name="userID" id="userID">
 			</section>
 			
